--- a/ecommerce/infoProducto.html
+++ b/ecommerce/infoProducto.html
@@ -1,44 +1,23 @@
-<!-- Sección donde se agregará los demás elementos html -->
-<section id="infoProduct" style="padding-top: 120px;padding-left: 20px;padding-right: 20px;">
-    <div class="columns">
-        <div class="is-half">
-            <div class="product-images">
-                <div class="product-main-img">
-                    <img id="imageProd" style="width: 300px;height: 300px">
-                </div>
+<section id="infoProduct" style="padding-top: 120px;">
+    <div class="columns" style="padding-top: 50px;">
+        <div class="column">
+            <div class="has-text-centered">
+                <img id="imageProd" style="width:400px">
             </div>
         </div>
-        
-        <div class="is-half">
-            <div id="numProd"></div>
-            <div class="product-inner">
-                <h2 id="NombreProd" class="product-name">Prueba</h2>
-                <div class="product-inner-price">
-                    <ins id="Precio">Nose</ins> <del></del>
-                    <br>
-                </div>  
-                
-                <form action="" class="cart">
-                    <div class="quantity">
-                        <input id="cant" type="number" size="4"  title="Qty" value="1" name="quantity" min="1" max="20" step="1">
-                    </div>
-                    <button id="addtocart" class="add_to_cart_button" type="submit" data-toggle="popover" data-placement="top" data-content="Se agregó correctamente">Agregar al Carrito</button>
-                </form>   
-            </div>
+        <div class="column">
+            <h2 id="NameProduct"></h2>
+            <p><strong>Características:</strong></p>
+            <p id="Descripcion"></p>
+            <br>
+            <p id="Precio" style="color: #3498db;font-size: 36px;font-weight: 700;line-height: 50px;"></p>
+            <br>
+            <br>
+            <input id="cant" type="number" title="Qty" value="1" name="quantity" min="1" max="20" step="1">
+            <button class="button is-danger">Comprar</button>
+            <a data-Subcategory="1" data-Category="1" class="Customizable"><button class="button is-primary">Agregar al Carrito</button></a>
         </div>
-        <div class="is-full">
-            <div role="tabpanel">
-                    <ul class="product-tab" role="tablist">
-                        <li role="presentation" class="active"><a aria-controls="home" role="tab" data-toggle="tab">Descripción</a></li>
-                    </ul>
-                    <div class="tab-content">
-                        <div role="tabpanel" class="tab-pane fade in active" id="home">
-                            <h2>Producto:</h2>  
-                            <p id="Descripcion"></p>
-                        </div>
-                    </div>
-            </div>
-        </div>
+
     </div>
 </section>
 
