--- a/ecommerce/custom_products.html
+++ b/ecommerce/custom_products.html
@@ -104,8 +104,8 @@
             </div>
           </div>
 
-          <div id="imagen" maxWidth="400px" style="display: inline;"></div>
-          <canvas id="filtered-image" maxWidth="400px" style="display: inline;"></canvas>
+          <div id="imagen" class="original" style="display: inline;"></div>
+          <canvas id="filtered-image" class="original" style="display: inline;"></canvas>
           
       </div>
       <div class="step-content has-text-centered">
@@ -115,60 +115,60 @@
           <table class="table is-bordered">
             <!-- Your table content -->
             <tr>
-              <td><img src="emoji-data/img-apple-64/1f600.png"/></td>
-              <td><img src="emoji-data/img-apple-64/1f601.png"/></td>
-              <td><img src="emoji-data/img-apple-64/1f602.png"/></td>
-              <td><img src="emoji-data/img-apple-64/1f603.png"/></td>
-              <td><img src="emoji-data/img-apple-64/1f604.png"/></td>
+              <td><img class="emojis-table" src="emoji-data/img-apple-64/1f600.png"/></td>
+              <td><img class="emojis-table" src="emoji-data/img-apple-64/1f601.png"/></td>
+              <td><img class="emojis-table" src="emoji-data/img-apple-64/1f602.png"/></td>
+              <td><img class="emojis-table" src="emoji-data/img-apple-64/1f603.png"/></td>
+              <td><img class="emojis-table" src="emoji-data/img-apple-64/1f604.png"/></td>
             </tr>
             <tr>
-              <td><img src="emoji-data/img-apple-64/1f605.png"/></td>
-              <td><img src="emoji-data/img-apple-64/1f606.png"/></td>
-              <td><img src="emoji-data/img-apple-64/1f607.png"/></td>
-              <td><img src="emoji-data/img-apple-64/1f608.png"/></td>
-              <td><img src="emoji-data/img-apple-64/1f609.png"/></td>
+              <td><img class="emojis-table" src="emoji-data/img-apple-64/1f605.png"/></td>
+              <td><img class="emojis-table" src="emoji-data/img-apple-64/1f606.png"/></td>
+              <td><img class="emojis-table" src="emoji-data/img-apple-64/1f607.png"/></td>
+              <td><img class="emojis-table" src="emoji-data/img-apple-64/1f608.png"/></td>
+              <td><img class="emojis-table" src="emoji-data/img-apple-64/1f609.png"/></td>
             </tr>
             <tr>
-              <td><img src="emoji-data/img-apple-64/1f610.png"/></td>
-              <td><img src="emoji-data/img-apple-64/1f611.png"/></td>
-              <td><img src="emoji-data/img-apple-64/1f612.png"/></td>
-              <td><img src="emoji-data/img-apple-64/1f613.png"/></td>
-              <td><img src="emoji-data/img-apple-64/1f614.png"/></td>
+              <td><img class="emojis-table" src="emoji-data/img-apple-64/1f610.png"/></td>
+              <td><img class="emojis-table" src="emoji-data/img-apple-64/1f611.png"/></td>
+              <td><img class="emojis-table" src="emoji-data/img-apple-64/1f612.png"/></td>
+              <td><img class="emojis-table" src="emoji-data/img-apple-64/1f613.png"/></td>
+              <td><img class="emojis-table" src="emoji-data/img-apple-64/1f614.png"/></td>
             </tr>
             <tr>
-              <td><img src="emoji-data/img-apple-64/1f615.png"/></td>
-              <td><img src="emoji-data/img-apple-64/1f616.png"/></td>
-              <td><img src="emoji-data/img-apple-64/1f617.png"/></td>
-              <td><img src="emoji-data/img-apple-64/1f618.png"/></td>
-              <td><img src="emoji-data/img-apple-64/1f619.png"/></td>
+              <td><img class="emojis-table" src="emoji-data/img-apple-64/1f615.png"/></td>
+              <td><img class="emojis-table" src="emoji-data/img-apple-64/1f616.png"/></td>
+              <td><img class="emojis-table" src="emoji-data/img-apple-64/1f617.png"/></td>
+              <td><img class="emojis-table" src="emoji-data/img-apple-64/1f618.png"/></td>
+              <td><img class="emojis-table" src="emoji-data/img-apple-64/1f619.png"/></td>
             </tr>
             <tr>
-              <td><img src="emoji-data/img-apple-64/1f620.png"/></td>
-              <td><img src="emoji-data/img-apple-64/1f621.png"/></td>
-              <td><img src="emoji-data/img-apple-64/1f622.png"/></td>
-              <td><img src="emoji-data/img-apple-64/1f623.png"/></td>
-              <td><img src="emoji-data/img-apple-64/1f624.png"/></td>
+              <td><img class="emojis-table" src="emoji-data/img-apple-64/1f620.png"/></td>
+              <td><img class="emojis-table" src="emoji-data/img-apple-64/1f621.png"/></td>
+              <td><img class="emojis-table" src="emoji-data/img-apple-64/1f622.png"/></td>
+              <td><img class="emojis-table" src="emoji-data/img-apple-64/1f623.png"/></td>
+              <td><img class="emojis-table" src="emoji-data/img-apple-64/1f624.png"/></td>
             </tr>
             <tr>
-              <td><img src="emoji-data/img-apple-64/1f625.png"/></td>
-              <td><img src="emoji-data/img-apple-64/1f626.png"/></td>
-              <td><img src="emoji-data/img-apple-64/1f627.png"/></td>
-              <td><img src="emoji-data/img-apple-64/1f628.png"/></td>
-              <td><img src="emoji-data/img-apple-64/1f629.png"/></td>
+              <td><img class="emojis-table" src="emoji-data/img-apple-64/1f625.png"/></td>
+              <td><img class="emojis-table" src="emoji-data/img-apple-64/1f626.png"/></td>
+              <td><img class="emojis-table" src="emoji-data/img-apple-64/1f627.png"/></td>
+              <td><img class="emojis-table" src="emoji-data/img-apple-64/1f628.png"/></td>
+              <td><img class="emojis-table" src="emoji-data/img-apple-64/1f629.png"/></td>
             </tr>
             <tr>
-              <td><img src="emoji-data/img-apple-64/1f630.png"/></td>
-              <td><img src="emoji-data/img-apple-64/1f631.png"/></td>
-              <td><img src="emoji-data/img-apple-64/1f632.png"/></td>
-              <td><img src="emoji-data/img-apple-64/1f633.png"/></td>
-              <td><img src="emoji-data/img-apple-64/1f634.png"/></td>
+              <td><img class="emojis-table" src="emoji-data/img-apple-64/1f630.png"/></td>
+              <td><img class="emojis-table" src="emoji-data/img-apple-64/1f631.png"/></td>
+              <td><img class="emojis-table" src="emoji-data/img-apple-64/1f632.png"/></td>
+              <td><img class="emojis-table" src="emoji-data/img-apple-64/1f633.png"/></td>
+              <td><img class="emojis-table" src="emoji-data/img-apple-64/1f634.png"/></td>
             </tr>
             <tr>
-              <td><img src="emoji-data/img-apple-64/1f635.png"/></td>
-              <td><img src="emoji-data/img-apple-64/1f636.png"/></td>
-              <td><img src="emoji-data/img-apple-64/1f637.png"/></td>
-              <td><img src="emoji-data/img-apple-64/1f638.png"/></td>
-              <td><img src="emoji-data/img-apple-64/1f639.png"/></td>
+              <td><img class="emojis-table" src="emoji-data/img-apple-64/1f635.png"/></td>
+              <td><img class="emojis-table" src="emoji-data/img-apple-64/1f636.png"/></td>
+              <td><img class="emojis-table" src="emoji-data/img-apple-64/1f637.png"/></td>
+              <td><img class="emojis-table" src="emoji-data/img-apple-64/1f638.png"/></td>
+              <td><img class="emojis-table" src="emoji-data/img-apple-64/1f639.png"/></td>
             </tr>
           </table>
         </div>
