--- a/ecommerce/index.html
+++ b/ecommerce/index.html
@@ -32,7 +32,7 @@
   <link rel="stylesheet" type="text/css" href="css/steps.css">
   <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
   <link rel="stylesheet" type="text/css" href="css/home.css">
-
+  <link rel="stylesheet" href="css/custom.css"/>
 
 </head>
 
