--- a/ecommerce/panel_usuario.html
+++ b/ecommerce/panel_usuario.html
@@ -54,7 +54,7 @@
         
         
         <div class="size12 trans-0-4 m-t-10 m-b-10 m-r-10">
-          <a class="button is-primary" onclick="completarRegistro()" name="button">Agregar</a>
+          <a class="button is-primary" onclick="completarRegistro()" name="button">Actualizar</a>
         </div>
       </form>
     </div>
