--- a/ecommerce/index.html
+++ b/ecommerce/index.html
@@ -12,7 +12,7 @@
   <link href="https://fonts.googleapis.com/css?family=Quicksand&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Amatic+SC&display=swap" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/gh/jamesssooi/Croppr.js@2.3.0/dist/croppr.min.css" rel="stylesheet" />
-  <link href="css/custom.css" rel="stylesheet">
+  <!--link href="css/custom.css" rel="stylesheet"-->
   <link rel="stylesheet" href="css/bulma.min.css">
   <link rel="stylesheet" type="text/css" href="css/bulma.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css">
@@ -34,7 +34,7 @@
   <link rel="stylesheet" type="text/css" href="css/steps.css">
   <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
   <link rel="stylesheet" type="text/css" href="css/home.css">
-  <link rel="stylesheet" href="css/custom.css" />
+  <!--link rel="stylesheet" href="css/custom.css" /-->
 
 </head>
 
