--- a/ecommerce/signIn.html
+++ b/ecommerce/signIn.html
@@ -25,11 +25,15 @@
                     </p>
                 </div>
                 <br>
+                <div class="has-text-centered">
+                    <div id="captchaGoogle" class="has-text-centered g-recaptcha" style="display: inline-block;"></div>
+                </div>
+                <br>
                 <p class="buttons">
                 	<button class="button is-success is-fullwidth" id="iniciarSesion">
 					    <span>Iniciar sesion</span>
 					</button>
-                </p>
+                </p>                
             </div>
 
             <div class="is-divider-vertical" data-content="O"></div>
@@ -83,6 +87,10 @@
                             <i class="fas fa-lock"></i>
                         </span>
                     </p>
+                </div>
+                <br>
+                <div class="has-text-centered">
+                    <div id="captchaGoogle2" class="has-text-centered g-recaptcha" style="display: inline-block;"></div>
                 </div>
                 <br>
                 <p class="buttons">
